--- a/wikilegis/templates/base.html
+++ b/wikilegis/templates/base.html
@@ -2,67 +2,85 @@
 
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>{% block title %}Wikilegis{% endblock %}</title>
+	<title>{% block title %}Wikilegis{% endblock %}</title>
 
-		<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/icon?family=Material+Icons' rel='stylesheet'>
-    {% compress css %}
-        <link type="text/x-scss" rel="stylesheet" href="{% static "sass/style.scss" %}"  media="screen,projection"/>
-    {% endcompress %}
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/icon?family=Material+Icons' rel='stylesheet'>
+	<link rel="shortcut icon" href="{% static "ico/favicon.ico" %}" />
+	{% compress css %}
+	<link type="text/x-scss" rel="stylesheet" href="{% static "sass/style.scss" %}" media="screen,projection" />
+	{% endcompress %}
 </head>
 
 <body>
-    {% block content %}
-        
-    {% endblock %}
+	{% block content %}
 
-    {% block bottom_scripts %}
-        {% compress js %}
-            <script type="text/javascript" src="{% static "js/jquery-2.1.4.js" %}"></script>
-            <script type="text/javascript" src="{% static "js/materialize.js" %}"></script>
-            <script type="text/javascript" src="{% static "js/diff.min.js" %}"></script>
-            <script type="text/javascript" src="{% static "js/lodash.min.js" %}"></script>
-            <script type="text/javascript" src="{% static "js/css3-animate-it.js" %}"></script>
-            <script type="text/javascript" src="{% static "js/scripts.js" %}"></script>
-        {% endcompress %}
+	{% endblock %}
 
-        {% if messages %}
-        <script type="text/javascript">
-            {% comment %}
-            FIXME This is a utterly idiotic way to handle messages.
+	{% block bottom_scripts %}
+	{% compress js %}
+	<script type="text/javascript" src="{% static "js/jquery-2.1.4.js" %}"></script>
+	<script type="text/javascript" src="{% static "js/materialize.js" %}"></script>
+	<script type="text/javascript" src="{% static "js/diff.min.js" %}"></script>
+	<script type="text/javascript" src="{% static "js/lodash.min.js" %}"></script>
+	<script type="text/javascript" src="{% static "js/css3-animate-it.js" %}"></script>
+	<script type="text/javascript" src="{% static "js/scripts.js" %}"></script>
+	{% endcompress %}
 
-            Here's why:
+	{% if messages %}
+	<script type="text/javascript">
+		{
+			%
+			comment %
+		}
+		FIXME This is a utterly idiotic way to handle messages.
 
-                * What if there is no JS available?
+		Here 's why:
 
-                * What if the user is browsing another tab and the toasts go away? (3000ms of duration)
+			*
+			What
+		if there is no JS available ?
 
-                * No color.
+			*
+			What
+		if the user is browsing another tab and the toasts go away ? (3000 ms of duration)
 
-                * Toasts in web browsers suck. We are not Google. This isn't Inbox.
+			*
+			No color.
 
-                * It isn't even working.
-            {% endcomment %}
-            $.ready(function() {
-                {% for message in messages %}
-                    Materialize.toast("{% if message.tags %}{{ message.tags }}: {% endif %}{{ message }}", 3000);
-                {% endfor %}
-            });
-        </script>
-        {% endif %}
-    {% endblock %}
-  
-    {% block partialscript %}
-        
-    {% endblock %}
-    
-   
-    <!-- Go to www.addthis.com/dashboard to customize your tools -->
-    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-56d59e5f7525348b"></script>
+			*Toasts in web browsers suck.We are not Google.This isn 't Inbox.
+
+			*
+			It isn 't even working. { %
+			endcomment %
+		}
+		$.ready(function() {
+			{
+				%
+				for message in messages %
+			}
+			Materialize.toast("{% if message.tags %}{{ message.tags }}: {% endif %}{{ message }}", 3000); {
+				%
+				endfor %
+			}
+		});
+	</script>
+	{% endif %}
+	{% endblock %}
+
+	{% block partialscript %}
+
+	{% endblock %}
+
+
+	<!-- Go to www.addthis.com/dashboard to customize your tools -->
+	<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-56d59e5f7525348b"></script>
 
 </body>
+
 </html>
