Melhora na página 404.html

--- a/wikilegis/templates/404.html
+++ b/wikilegis/templates/404.html
@@ -4,23 +4,23 @@
 {% load i18n %}
 
 {% block content %}
-<div class="dark-bg valign-wrapper">
-    <div class="container about">
-        <div class="row">
-            <div class="col m3 s12">
-                {% load static %}
-                {% include "_sidebar_logo.html" %}
+<div class="container cover animatedParent animateOnce" data-sequence='300'>
+	<div class="row cover-content">
+		<div class="col l3 m12 valign-wrapper animated fadeInLeftShort" data-id='1'>
+			{% include "_sidebar_logo.html" %}
+		</div>
+		<div class="col l9 m12 valign-wrapper">
+			<div class="cover-info animated fadeInRightShort" data-id='2'>
+				<h1>{% trans "Page not found" %}</h1>
+			</div>
+		</div>
+	</div>
+	<div class="row cover-content">
+		<div class="col m12">
+            <div class="animated fadeInUpShort" data-id='3'>
+			<a class="waves-effect wbtn waves-light btn right-align" href="{% url "index" %}">{% trans "Back to main page" %}</a>
             </div>
-            <div class="col m3 s12">
-                <h5>{% trans "Page not found" %}</h5>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col m12">
-                <a class="waves-effect wbtn waves-light btn right-align" href="{% url "index" %}">{% trans "Back to main page" %}</a></p>
-        	</div>
-        </div>
-    </div>
+		</div>
+	</div>
 </div>
 {% endblock %}
